add face verification policy
